--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Event Tracking with Google Analytics",
+  "name": "Event Tracking with Google Universal Analytics",
   "version": "2.0.0",
-  "description": "A sample extension which uses Google Analytics to track usage.",
+  "description": "A sample extension which uses Google Universal Analytics to track usage.",
   "browser_action": {
     "default_title": "Open the popup",
     "default_icon": "analytics-extension-icon-19.png",
