--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,5 +13,5 @@
   },
 
   "manifest_version": 2,
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
